Chapter_3-Linked-Lists/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
08:48:38 **** Build of configuration Debug for project Figure-3-31_The-Library_Program ****
make all 
Building file: ../src/Figure-3-31_The-Library_Program.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Figure-3-31_The-Library_Program.d" -MT"src/Figure-3-31_The-Library_Program.d" -o "src/Figure-3-31_The-Library_Program.o" "../src/Figure-3-31_The-Library_Program.cpp"
../src/Figure-3-31_The-Library_Program.cpp:95:45: error: could not convert ‘0’ from ‘int’ to ‘std::list<Author>::iterator {aka std::_List_iterator<Author>}’
  CheckedOutBook(list<Author>::iterator ar = 0,
                                             ^
../src/Figure-3-31_The-Library_Program.cpp:96:34: error: could not convert ‘0’ from ‘int’ to ‘std::list<Book>::iterator {aka std::_List_iterator<Book>}’
        list<Book>::iterator bk = 0)
                                  ^
../src/Figure-3-31_The-Library_Program.cpp: In function ‘char* getString(char*)’:
../src/Figure-3-31_The-Library_Program.cpp:217:21: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  for(i = 0; destin[i] = toupper(s[i]); i++);
                     ^
../src/Figure-3-31_The-Library_Program.cpp:217:36: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  for(i = 0; destin[i] = toupper(s[i]); i++);
                                    ^
../src/Figure-3-31_The-Library_Program.cpp:217:37: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  for(i = 0; destin[i] = toupper(s[i]); i++);
                                     ^
../src/Figure-3-31_The-Library_Program.cpp: In function ‘void includeBook()’:
../src/Figure-3-31_The-Library_Program.cpp:245:55: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
  newAuthor.name = getString("Enter the authors name: ");
                                                       ^
../src/Figure-3-31_The-Library_Program.cpp:246:59: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
  newBook.title = getString("Enter the title of the book: ");
                                                           ^
../src/Figure-3-31_The-Library_Program.cpp:248:67: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  list<Author>::iterator oldAuthor = find(catalog[newAuthor.name[0]].begin(),
                                                                   ^
../src/Figure-3-31_The-Library_Program.cpp:249:37: warning: array subscript has type ‘char’ [-Wchar-subscripts]
            catalog[newAuthor.name[0]].end(), newAuthor);
                                     ^
../src/Figure-3-31_The-Library_Program.cpp:251:43: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  if(oldAuthor == catalog[newAuthor.name[0]].end())
                                           ^
../src/Figure-3-31_The-Library_Program.cpp:254:28: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   catalog[newAuthor.name[0]].push_front(newAuthor);
                            ^
../src/Figure-3-31_The-Library_Program.cpp: In function ‘void checkOutBook()’:
../src/Figure-3-31_The-Library_Program.cpp:268:49: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
  patron.name = getString("Enter patron's name: ");
                                                 ^
../src/Figure-3-31_The-Library_Program.cpp:272:50: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
   author.name = getString("Enter author's name: ");
                                                  ^
../src/Figure-3-31_The-Library_Program.cpp:273:42: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   authorRef = find(catalog[author.name[0]].begin(),
                                          ^
../src/Figure-3-31_The-Library_Program.cpp:274:42: warning: array subscript has type ‘char’ [-Wchar-subscripts]
                    catalog[author.name[0]].end(), author);
                                          ^
../src/Figure-3-31_The-Library_Program.cpp:276:41: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   if(authorRef == catalog[author.name[0]].end())
                                         ^
../src/Figure-3-31_The-Library_Program.cpp:283:57: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
   book.title = getString("Enter the title of the book: ");
                                                         ^
../src/Figure-3-31_The-Library_Program.cpp:293:40: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  patronRef = find(people[patron.name[0]].begin(),
                                        ^
../src/Figure-3-31_The-Library_Program.cpp:294:34: warning: array subscript has type ‘char’ [-Wchar-subscripts]
             people[patron.name[0]].end(), patron);
                                  ^
../src/Figure-3-31_The-Library_Program.cpp:298:39: warning: array subscript has type ‘char’ [-Wchar-subscripts]
  if(patronRef == people[patron.name[0]].end())  // a new patron in the library
                                       ^
../src/Figure-3-31_The-Library_Program.cpp:301:24: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   people[patron.name[0]].push_front(patron);
                        ^
../src/Figure-3-31_The-Library_Program.cpp:302:46: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   (*bookRef).patron = &*people[patron.name[0]].begin();
                                              ^
../src/Figure-3-31_The-Library_Program.cpp: In function ‘void returnBook()’:
../src/Figure-3-31_The-Library_Program.cpp:324:50: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
   patron.name = getString("Enter patron's name: ");
                                                  ^
../src/Figure-3-31_The-Library_Program.cpp:325:41: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   patronRef = find(people[patron.name[0]].begin(),
                                         ^
../src/Figure-3-31_The-Library_Program.cpp:326:29: warning: array subscript has type ‘char’ [-Wchar-subscripts]
        people[patron.name[0]].end(), patron);
                             ^
../src/Figure-3-31_The-Library_Program.cpp:328:40: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   if(patronRef == people[patron.name[0]].end())
                                        ^
../src/Figure-3-31_The-Library_Program.cpp:335:50: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
   author.name = getString("Enter author's name: ");
                                                  ^
../src/Figure-3-31_The-Library_Program.cpp:336:42: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   authorRef = find(catalog[author.name[0]].begin(),
                                          ^
../src/Figure-3-31_The-Library_Program.cpp:337:30: warning: array subscript has type ‘char’ [-Wchar-subscripts]
        catalog[author.name[0]].end(), author);
                              ^
../src/Figure-3-31_The-Library_Program.cpp:339:41: warning: array subscript has type ‘char’ [-Wchar-subscripts]
   if(authorRef == catalog[author.name[0]].end())
                                         ^
../src/Figure-3-31_The-Library_Program.cpp:346:57: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
   book.title = getString("Enter the title of the book: ");
                                                         ^
make: *** [src/Figure-3-31_The-Library_Program.o] Error 1
08:48:43 **** Clean-only build of configuration Debug for project Figure-3-31_The-Library_Program ****
make clean 
rm -rf  ./src/Figure-3-31_The-Library_Program.o  ./src/Figure-3-31_The-Library_Program.d  Figure-3-31_The-Library_Program
 
